k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: pigo
  name: pigo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pigo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pigo
    spec:
      containers:
      - args:
        - rest
        - --config
        - /rest/config.yaml
        image: ghcr.io/edgeflare/pigo
        imagePullPolicy: Always
        name: pigo-rest
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /rest
          name: rest-config
#      - image: ghcr.io/edgeflare/pigo
#        name: pigo-pipeline
#        resources: {}
      volumes:
      - name: rest-config
        secret:
          defaultMode: 420
          secretName: pigo-rest
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: pigo
  name: pigo
spec:
  ports:
  - name: "8080"
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: pigo
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/name: pigo
  name: pigo
spec:
  hostnames:
  - api.example.org
  - pigo.example.org
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-default
    namespace: envoy-gateway-system
    sectionName: https
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-default
    namespace: envoy-gateway-system
    sectionName: http
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: istio-default
    namespace: istio-system
    sectionName: https
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: istio-default
    namespace: istio-system
    sectionName: http
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: pigo
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
---
